<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/white_left_right_cnr_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView102"
            style="@style/normaltxt_24sp_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_24"
            android:text="@string/negotiate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView103"
            style="@style/normaltxt_16sp_Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/price_details"
            app:layout_constraintStart_toStartOf="@+id/textView102"
            app:layout_constraintTop_toBottomOf="@+id/textView102" />

        <TextView
            android:id="@+id/textView104"
            style="@style/normaltxt_15sp_Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/offer_price"
            android:textColor="@color/dark_gray"
            app:layout_constraintStart_toStartOf="@+id/textView103"
            app:layout_constraintTop_toBottomOf="@+id/textView103" />

        <TextView
            android:id="@+id/textView105"
            style="@style/normaltxt_15sp_Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp_24"
            android:text="@string/sar_123_25"
            app:layout_constraintBottom_toBottomOf="@+id/textView104"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView104" />

        <TextView
            android:id="@+id/textView106"
            style="@style/normaltxt_12sp_Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/you_can_negotiate_only_three_times"
            android:textColor="@color/dark_gray"
            app:layout_constraintStart_toStartOf="@+id/textView104"
            app:layout_constraintTop_toBottomOf="@+id/textView104" />

        <TextView
            android:id="@+id/textView107"
            style="@style/normaltxt_15sp_Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="right"
            android:text="@string/declined"
            android:textColor="#CA2929"
            app:layout_constraintEnd_toEndOf="@+id/textView105"
            app:layout_constraintTop_toBottomOf="@+id/textView105" />

        <TextView
            android:id="@+id/textView108"
            style="@style/normaltxt_15sp_Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:text="@string/owner_price"
            android:textColor="@color/dark_gray"
            app:layout_constraintStart_toStartOf="@+id/textView106"
            app:layout_constraintTop_toBottomOf="@+id/textView106" />

        <TextView
            android:id="@+id/textView109"
            style="@style/normaltxt_15sp_Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/sar_123_25"
            app:layout_constraintBottom_toBottomOf="@+id/textView108"
            app:layout_constraintEnd_toEndOf="@+id/textView107"
            app:layout_constraintTop_toTopOf="@+id/textView108" />

        <include
            android:id="@+id/acceot_btn"
            layout="@layout/common_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/textView109"
            app:layout_constraintStart_toStartOf="@+id/textView108"
            app:layout_constraintTop_toBottomOf="@+id/textView108" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lay_Bargain"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_50"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/stroke_black_common_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/acceot_btn"
            app:layout_constraintStart_toStartOf="@+id/acceot_btn"
            app:layout_constraintTop_toBottomOf="@+id/acceot_btn">

            <TextView
                android:id="@+id/tvbargin"
                style="@style/normaltxt_16sp_Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:text="@string/bargain"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView401"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/tvbargin"
                app:layout_constraintEnd_toStartOf="@+id/tvbargin"
                app:layout_constraintTop_toTopOf="@+id/tvbargin"
                app:srcCompat="@drawable/nargin_icon" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>